# zusage

./: .gitignore  CMakeLists.txt  README.md
include/: usage_analytics.h
server/: app.js  index.js  package.json
server/public/: .script.js.swp  index.ejs  index.html  login.html  script.js  style.css
src/: .zusage.c.swp  CMakeLists.txt  zusage.c
tests/: CMakeLists.txt  getVersion.c  tests.sh
